# enkrypton

./: .gitignore  Cargo.toml  README.md  build_all.ps1  index.html  package.json  pnpm-lock.yaml  scan_file.ps1  stats.html  update_pkgs.ps1  update_tor.ps1  vite.config.ts  vite.config.ts.timestamp-1705392066420-843d4a89a5834.mjs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-on-tag.yml
src/: App.scss  App.tsx  main.tsx  styles.scss
src-packages/directories/: Cargo.toml
src-packages/encryption/: Cargo.toml  README.md  zeroize_key  zeroize_key.pub
src-packages/encryption/src/: consts.rs  lib.rs  tests.rs
src-packages/messaging/: Cargo.toml
src-packages/messaging/src/: lib.rs
src-packages/messaging/src/client/: client.rs  manager_ext.rs  mod.rs  proxy.rs  util.rs
src-packages/messaging/src/client/client/: flush.rs  heartbeat.rs  index.rs  mod.rs
src-packages/messaging/src/client/tls/: client.rs  mod.rs  request.rs  response.rs
src-packages/messaging/src/general/: connection.rs  manager.rs  mod.rs  receive_thread.rs
src-packages/messaging/src/general/traits/: client_helper.rs  mod.rs  server_helper.rs
src-packages/messaging/src/server/: manager_ext.rs  mod.rs  server.rs  ws_manager.rs
src-packages/messaging/src/server/routes/: index.rs  mod.rs
src-packages/messaging/src/server/routes/ws/: index.rs
src-packages/misc/: Cargo.toml
src-packages/misc/src/: connection.rs  lib.rs  manager.rs
src-packages/misc/src/traits/: client_helper.rs  mod.rs  server_helper.rs
src-packages/payloads/: Cargo.toml
src-packages/payloads/src/: data.rs  event.rs  lib.rs
src-packages/payloads/src/packets/: client_2_server.rs  identity.rs  mod.rs  server_2_client.rs
src-packages/payloads/src/payloads/: mod.rs  start_tor.rs  storage_changed.rs
src-packages/payloads/src/payloads/splashscreen/: closed.rs  mod.rs
src-packages/payloads/src/payloads/tor/: mod.rs  start_tor.rs
src-packages/payloads/src/payloads/ws/: client_update.rs  message_status.rs  mod.rs  msg.rs
src-packages/secure-storage/: Cargo.toml
src-packages/secure-storage/src/: consts.rs  error.rs  lib.rs  tests.rs
src-packages/secure-storage/src/encryption/: aes.rs
src-packages/secure-storage/src/storage/: generate.rs  mod.rs  parse.rs  storage_ext.rs
src-packages/shared/: Cargo.toml
src-packages/shared/src/: config.rs  directories.rs  lib.rs  util.rs
src-packages/storage-internal/: Cargo.toml
src-packages/storage-internal/src/: data.rs  lib.rs  manager.rs
src-packages/storage-internal/src/helpers/: chats.rs  get_private_key.rs
src-packages/tor-client/: Cargo.toml
src-packages/tor-client/src/: client.rs  lib.rs  manager_ext.rs  proxy.rs
src-packages/tor-client/src/tls/: client.rs
src-packages/tor-proxy/: Cargo.toml  build.rs
src-packages/tor-proxy/assets/: .gitignore
src-packages/tor-proxy/assets/linux/i686/: snowflake-client.hash  tor.hash  tor.zip.REMOVED.git-id
src-packages/tor-proxy/assets/linux/x86_64/: snowflake-client.hash  tor.hash  tor.zip.REMOVED.git-id
src-packages/tor-proxy/assets/windows/i686/: snowflake-client.hash  tor.hash  tor.zip.REMOVED.git-id
src-packages/tor-proxy/assets/windows/x86_64/: snowflake-client.hash  tor.hash  tor.zip.REMOVED.git-id
src-packages/tor-proxy/src/: config.rs  consts.rs  lib.rs  mainloop.rs  manager.rs
src-packages/tor-proxy/src/config/: mod.rs
src-packages/tor-proxy/src/misc/: integrity_check.rs  messages.rs  tools.rs
src-packages/tor-proxy/src/parser/: messages.rs  stdout.rs
src-packages/tor-proxy/src/service/: hostname.rs  mod.rs
src-packages/tor-proxy/tor-updater/: Cargo.toml  Readme.md
src-packages/tor-proxy/tor-updater/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri-nobuild.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  startup.rs  util.rs
src-tauri/src/assets/: tor.exe.hash
src-tauri/src/assets/linux/i686/: tor.zip.hash
src-tauri/src/assets/linux/x86_64/: tor.hash  tor.zip.hash
src-tauri/src/assets/windows/i686/: tor.zip.hash
src-tauri/src/assets/windows/x86_64/: tor.exe.hash  tor.zip.hash
src-tauri/src/client/: main.rs  manager.rs  mod.rs  proxy.rs
src-tauri/src/client/tls/: client.rs  mod.rs  request.rs  response.rs
src-tauri/src/commands/: general.rs  mod.rs
src-tauri/src/commands/storage/: delete.rs  exists.rs  get.rs  initialize.rs  is_initialized.rs  is_valid.rs  mod.rs  save.rs  set.rs  unlock_or_create.rs  unlocked.rs
src-tauri/src/commands/tor/: alive.rs  check.rs  hostname.rs  mod.rs  splashscreen_closed.rs  tor_check.rs
src-tauri/src/commands/ws/: connect.rs  mod.rs  send.rs
src-tauri/src/encryption/: mod.rs  rsa.rs
src-tauri/src/messaging/: connection.rs  manager.rs  mod.rs
src-tauri/src/messaging/client/: main.rs  manager.rs  manager_ext.rs  mod.rs
src-tauri/src/messaging/client/tls/: client.rs  mod.rs  request.rs
src-tauri/src/messaging/packets/: client_2_server.rs  identity.rs  server_2_client.rs
src-tauri/src/messaging/payloads/ws/: client_update.rs  msg.rs
src-tauri/src/messaging/traits/: mod.rs
src-tauri/src/messaging/webserver/: manager_ext.rs  mod.rs  server.rs  ws_manager.rs
src-tauri/src/messaging/webserver/routes/: index.rs  mod.rs
src-tauri/src/messaging/webserver/routes/ws/: index.rs
src-tauri/src/payloads/: mod.rs  start_tor.rs
src-tauri/src/payloads/ws/: mod.rs
src-tauri/src/storage/: data.rs  manager.rs  mod.rs  util.rs
src-tauri/src/storage/encryption/: rsa.rs
src-tauri/src/storage/helpers/: chats.rs  get_private_key.rs  mod.rs
src-tauri/src/tor/: check.rs  commands.rs  config.rs  consts.rs  integrity_check.rs  mainloop.rs  manager.rs  mod.rs
src-tauri/src/tor/misc/: commands.rs  integrity_check.rs  messages.rs  mod.rs  payloads.rs  tools.rs
src-tauri/src/tor/parser/: messages.rs  mod.rs  stdout.rs
src-tauri/src/tor/service/: hostname.rs  mod.rs
src-tauri/src/util/: general.rs  mod.rs  storage_helper.rs  url.rs
src-tauri/src/webserver/: routes.rs  server.rs
src-tauri/src/webserver/routes/: index.rs
(+71 files in other folders)
