[workspace]
resolver = "3"
members = ["src-tauri", "src-packages/*"]

[workspace.dependencies]
# Workspace crates
storage-internal = { path = "src-packages/storage-internal" }
tor-proxy = { path = "src-packages/tor-proxy" }
payloads = { path = "src-packages/payloads" }
messaging = { path = "src-packages/messaging" }
shared = { path = "src-packages/shared" }
encryption = { path = "src-packages/encryption" }
secure-storage = { path = "src-packages/secure-storage" }
tor-updater = { path = "src-packages/tor-proxy/tor-updater" }

# Tauri stack
tauri = "2"
tauri-build = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-shell = "2"
signal-hook = "0.3.17"

# Async and runtime
tokio = "1.34.0"
smol = { version = "2.0.0", default-features = false }
async-trait = "0.1.74"
async-channel = "2.1.1"
futures-util = "0.3.29"
tokio-socks = "0.5.1"
tokio-tungstenite = "0.23.1"
tokio-rustls = "0.26.0"

# Web services
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"

# Serialization and data
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
ts-rs = "9.0.1"
duplicate = "1.0.0"

# Crypto and security
openssl = "0.10.60"
argon2 = { version = "0.5.2", features = ["std", "password-hash"] }
zeroize = { version = "1.7.0", features = ["derive", "zeroize_derive"] }
sha2 = "0.10.8"
webpki-roots = "0.26.0"

# Networking and downloads
url = "2.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
zip-extract = "0.1.2"
zip = { version = "2.1.6", features = ["deflate"] }
flate2 = "1.0.28"
tar = "0.4.40"

# System and tooling
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "0.4.20"
thiserror = "1.0.50"
port_check = "0.2.1"
byteorder = "1.5.0"
hex = "0.4.3"
sysinfo = "0.31.2"
regex = "1.10.2"
itertools = "0.13.0"

[profile.release]
strip = true
