[package]
name = "enkrypton"
version = "1.0.2"
description = "End-To-End Encrypted Decentralized Messaging App with Tor"
authors = ["sshcrack"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "window-set-maximizable",
    "window-set-decorations",
    "window-maximize",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
actix-web = "4.3.1"
lazy_static = "1.4.0"
sha2 = "0.10.7"
hex = "0.4.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "colored",
] }
log = "^0.4"
async-channel = "2.1.0"
signal-hook = "0.3.17"
sysinfo = "0.29.8"
rand = "0.8.5"
actix-web-actors = "4.2.0"
actix = "0.13.0"
tokio-tungstenite = "0.20.0"
tokio-socks = "0.5.1"
url = "2.4.0"
rustls = "0.21.7"
webpki-roots = "0.25.2"
async-rustls = "0.4.0"
smol = "1.3.0"
tokio = { version = "1.32.0", default-features = false, features = ["net"] }
futures-util = "0.3.28"
async-trait = "0.1.73"
regex = "1.9.5"
port_check = "0.1.5"
storage-internal = { path = "../src-packages/storage-internal"}
tor-proxy = { path = "../src-packages/tor-proxy"}
payloads = { path = "../src-packages/payloads"}
messaging = { path = "../src-packages/messaging"}
shared = { path = "../src-packages/shared"}
zeroize = { version = "1.6.0", features = ["derive"] }
zip-extract = "0.1.2"
bincode = "1.3.3"
openssl = "0.10.57"
serde_bytes = "0.11.12"
async-stream = "0.3.5"
duplicate = "1.0.0"

[dev-dependencies]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
dev = [ "messaging/dev", "tor-proxy/dev", "tauri/devtools" ]
enable-console = [ ]
