[package]
name = "enkrypton"
version = "1.0.2"
description = "End-To-End Encrypted Decentralized Messaging App with Tor"
authors = ["sshcrack"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = [
    "window-set-maximizable",
    "window-set-decorations",
    "window-maximize",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
lazy_static = "1.4.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "colored",
] }
log = "^0.4"
signal-hook = "0.3.17"
sysinfo = "0.30.5"
regex = "1.10.2"
storage-internal = { path = "../src-packages/storage-internal" }
tor-proxy = { path = "../src-packages/tor-proxy", default-features=false }
payloads = { path = "../src-packages/payloads" }
messaging = { path = "../src-packages/messaging" }
shared = { path = "../src-packages/shared" }

[features]
default = [ "tor-proxy/fix-snowflake"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
snowflake = ["tor-proxy/snowflake"]
dev = ["messaging/dev", "tor-proxy/dev", "tauri/devtools", "enable-console"]
enable-console = []
vendored = [ "storage-internal/vendored", "tor-proxy/vendored", "payloads/vendored", "messaging/vendored"]

[profile.release]
strip=true

