[package]
name = "enkrypton"
version = "1.0.2"
description = "End-To-End Encrypted Decentralized Messaging App with Tor"
authors = ["sshcrack"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
tauri-plugin-log = { workspace = true, features = ["colored"] }
log = { workspace = true }
signal-hook = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
storage-internal = { workspace = true }
tor-proxy = { workspace = true }
payloads = { workspace = true }
messaging = { workspace = true }
shared = { workspace = true }
tauri-plugin-shell = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
dev = ["messaging/dev", "tor-proxy/dev", "tauri/devtools", "enable-console"]
enable-console = []
vendored = [
    "storage-internal/vendored",
    "tor-proxy/vendored",
    "payloads/vendored",
    "messaging/vendored",
]
