[package]
name = "encryption"
description = "Holds useful functions for encrypting and decrypting data. Contains serializable private / public keys as well."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
openssl = "0.10.60"
serde = { version = "1.0.193", features = ["derive"] }
