[package]
name = "encryption"
description = "Holds useful functions for encrypting and decrypting data. Contains serializable private / public keys as well."
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
vendored = [ "openssl/vendored" ]
