[package]
name = "messaging"
description = "Contains client, server and shared code for messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
async-channel = "2.1.1"
async-trait = "0.1.74"
lazy_static = "1.4.0"
log = "0.4.20"
openssl = "0.10.60"
shared = { path = "../shared" }
payloads = { path = "../payloads" }
tor-proxy = { path = "../tor-proxy" }
encryption = { path = "../encryption" }
smol = "1.3.0"
storage-internal = { path = "../storage-internal" }
tauri = "1.5.3"
hex = { version = "0.4.3", optional = true }
tokio = "1.34.0"
async-rustls = "0.4.1"
rustls = "0.21.9"
tokio-socks = "0.5.1"
url = "2.5.0"
webpki-roots = "0.25.3"
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.29"
tokio-tungstenite = "0.20.1"
serde_json = "1.0.108"


[features]
dev = ["hex"]
