[package]
name = "messaging"
description = "Contains client, server and shared code for messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
async-channel = "2.1.1"
async-trait = "0.1.74"
lazy_static = "1.4.0"
log = "0.4.20"
openssl = "0.10.60"
shared = { path = "../shared" }
payloads = { path = "../payloads" }
tor-proxy = { path = "../tor-proxy" }
encryption = { path = "../encryption" }
smol = "2.0.0"
storage-internal = { path = "../storage-internal" }
tauri = "1.5.3"
tokio = "1.34.0"
hex = { version = "0.4.3", optional = true }
tokio-socks = "0.5.1"
url = "2.5.0"
webpki-roots = "0.26.0"
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.29"
tokio-tungstenite = "0.23.1"
serde_json = "1.0.108"
tokio-rustls = "0.26.0"


[features]
dev = ["hex"]
vendored = [ "openssl/vendored", "payloads/vendored", "tor-proxy/vendored", "encryption/vendored", "storage-internal/vendored" ]
