[package]
name = "messaging"
description = "Contains client, server and shared code for messaging"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
shared = { workspace = true }
payloads = { workspace = true }
tor-proxy = { workspace = true }
encryption = { workspace = true }
storage-internal = { workspace = true }
smol = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true, optional = true }
tokio-socks = { workspace = true }
url = { workspace = true }
webpki-roots = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
tokio-rustls = { workspace = true }


[features]
dev = ["hex"]
vendored = [ "openssl/vendored", "payloads/vendored", "tor-proxy/vendored", "encryption/vendored", "storage-internal/vendored" ]
