[package]
name = "misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
lazy_static = "1.4.0"
log = "0.4.20"
openssl = "0.10.59"
payloads = { path = "../payloads" }
storage-internal = { path = "../storage-internal" }
