[package]
name = "payloads"
description = "Payloads between rust and typescript, packets being sent between client and server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0.75"
#log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
ts-rs = { version = "7.0.0", optional = true }
encryption = { path = "../encryption"}
duplicate = "1.0.0"
bincode = "1.3.3"
tokio-tungstenite = "0.20.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
tauri = "1.5.3"
zeroize = { version = "1.7.0", features = ["derive"] }

[features]
default = [ ]
export_ts = [ "ts-rs"]
