[package]
name = "payloads"
description = "Payloads between rust and typescript, packets being sent between client and server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0.75"
#log = "0.4.20"
serde = { workspace = true }
ts-rs = { workspace = true, optional = true }
encryption = { workspace = true }
duplicate = { workspace = true }
bincode = { workspace = true }
tokio-tungstenite = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
tauri = { workspace = true }
zeroize = { workspace = true }

[features]
default = []
export_ts = ["ts-rs"]
vendored = ["encryption/vendored"]
