[package]
name = "secure-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
byteorder = "1.5.0"
keyring = { version = "2.0.5", default-features = false }
lazy_static = "1.4.0"
log = "0.4.20"
openssl = "0.10.57"
secstr = "0.5.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
zeroize = { version = "1.6.0", features = ["zeroize_derive", "derive"] }
