[package]
name = "secure-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std", "password-hash"] }
byteorder = "1.5.0"
lazy_static = "1.4.0"
openssl = "0.10.60"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
zeroize = { version = "1.7.0", features = ["zeroize_derive", "derive"] }

[features]
vendored = [ "openssl/vendored" ]