[package]
name = "shared"
description = "Just a simple collection of all libraries enkrypton uses, can be changed easily in here"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
port_check = "0.2.1"
tauri = "1.5.3"
tokio = "1.34.0"

[target.'cfg(target_family="unix")'.dependencies]
smol = { version = "2.0.0", default-features = false }
