[package]
name = "shared"
description = "Just a simple collection of all libraries enkrypton uses, can be changed easily in here"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
port_check = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_family="unix")'.dependencies]
smol = { workspace = true, default-features = false }
