[package]
name = "storage-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
lazy_static = "1.4.0"
log = "0.4.20"
secure-storage = { path = "../secure-storage" }
shared = { path = "../shared" }
encryption = { path = "../encryption" }
payloads = { path = "../payloads" }
serde = { version = "1.0.192", features = ["derive"] }
tauri = "1.5.2"
tokio = "1.33.0"
ts-rs = { version="7.0.0", optional = true}
zeroize = { version = "1.6.0", features = ["derive"] }

[target.'cfg(target_family="unix")'.dependencies]
smol = { version = "1.3.0", default-features = false }
