[package]
name = "storage-internal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
secure-storage = { workspace = true}
shared = { workspace = true }
encryption = { workspace = true }
payloads = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_family="unix")'.dependencies]
smol = { workspace = true, default-features = false }

[features]
vendored = [ "secure-storage/vendored", "encryption/vendored", "payloads/vendored" ]