[package]
name = "tor-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
payloads = { path="../payloads" }
misc = { path = "../misc" }
anyhow = "1.0.75"
async-channel = "2.1.0"
async-rustls = "0.4.1"
async-trait = "0.1.74"
futures-util = "0.3.29"
log = "0.4.20"
rustls = "0.21.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
smol = "1.3.0"
tauri = "1.5.2"
tokio = "1.33.0"
tokio-socks = "0.5.1"
tokio-tungstenite = "0.20.1"
url = "2.4.1"
webpki-roots = "0.25.2"
