workspace = { members = ["tor-updater"] }
[package]
name = "tor-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-channel = "2.1.1"
lazy_static = "1.4.0"
log = "0.4.20"
#port_check = "0.1.5"
sha2 = "0.10.8"
sysinfo = "0.29.11"
tokio = { version = "1.34.0", features = ["full"] }
payloads = { path = "../payloads" }
shared = { path = "../shared" }
tauri = "1.5.3"
hex = "0.4.3"
zip-extract = "0.1.2"
async-trait = { version = "0.1.77" }
serde = { version = "1.0.195", optional = true }
serde_json = { version = "1.0.111", optional = true }
#rand = "0.8.5"


[target.'cfg(target_family="unix")'.dependencies]
smol = { version = "1.3.0", default-features = false }

[features]
default = [ "fix-snowflake" ]
dev = [ ]
snowflake = ["dep:serde", "dep:serde_json"]
fix-snowflake = []