[package]
name = "tor-proxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["full"] }
payloads = { workspace = true }
shared = { workspace = true }
tauri = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, optional = true }
zip-extract = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_family="unix")'.dependencies]
smol = { workspace = true, default-features = false }

[features]
default = [ "fix-snowflake" ]
dev = [ ]
snowflake = ["dep:serde", "dep:serde_json"]
fix-snowflake = []
vendored = [ "payloads/vendored" ]

[build-dependencies]
tor-updater = { workspace = true }
