[package]
name = "tor-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
itertools = "0.13.0"
scraper = "0.20.0"
anyhow = "1.0.75"
flate2 = "1.0.28"
tar = "0.4.40"
openssl = "0.10.60"
lazy_static = "1.4.0"
hex = "0.4.3"
zip = { version = "2.1.6", features = ["deflate"] }
zip-extensions = "0.8.1"

[features]
vendored = [ "openssl/vendored" ]