[package]
name = "tor-updater"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
openssl = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }

[features]
vendored = [ "openssl/vendored" ]
